--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         </ul>
     </main>
     <script src="js/dom.js"></script>
+    <script>
+        const liCollection = document.getElementsByTagName('li');
+        //console.log(liCollection);
+        for (const li of liCollection) {
+            console.log(li.innerText);
+        }
+    </script>
 </body>
 
 </html>
